fix: fixed styles z-index

--- a/online-zoo/assets/styles/global.css
+++ b/online-zoo/assets/styles/global.css
@@ -18,7 +18,8 @@ body {
     position: relative;
 }
 
-.wrapper--active-bg::after {
+.wrapper--active-bg::after,
+.wrapper--active-bg-testimonials-card::after {
     content: "";
     position: absolute;
     left: 0;
@@ -26,7 +27,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.548);
-    z-index: 1;
+    z-index: 100;
 }
 
 *,
